# python-from-scratch

./: README.md  aws.py  brit-a-z.txt  lesson2.py  lesson3.py  passwordobject.py  pwgen.py  pythonfromscratch.py
countdown/01/: buildwordlist.py  lesson01.md
countdown/02/: buildwordlist.py  lesson02.md
countdown/03/: buildwordlist.py  lesson03.md
countdown/04/: anagrams.py  brit-a-z.txt  lesson04.md
countdown/05/: anagrams.py  buildwordlist.py  lesson05.md
countdown/06/: buildwordlist.py  countdown.py  lesson06.md
countdown/07/: countdown.py  lesson07.md
countdown/08/: countdown.py  lesson08.md
countdown/09/: anagrams.py  countdown.py  lesson09.md
generators/: pyproject.toml
generators/generators/: instances.py
generators/tests/: test_generators.py  test_instances.py
hublogs/: README.md  hlwgui.py  pyproject.toml
hublogs/hublogs/: app.py  ccanumbers.py  hlogs.py  hlwatch.py  hlwgui.py  numbers.py  s3.py  wait.py
oop/: README.md  app.py  pyproject.toml
oop/oop/: base.py  hangman.py
