[tool.poetry]
name = "hublogs"
version = "0.1.0"
description = "retrieve hublogs from s3"
authors = ["ccdale <chris.allison@centrica.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
