[tool.poetry]
name = "hublogs"
version = "0.2.1"
description = "retrieve hublogs from s3"
authors = ["ccdale <chris.allison@centrica.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.5"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hlwatch = "hublogs.hlwatch:watchClipboard"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
